# mot

./: .env.example  .gitignore  Makefile  actionrec_sample_1.json  pyproject.toml
markup/gt/: 1_20250126T121502.yaml  2_20250125T161501.yaml  2_20250125T170001.yaml  actionrec_sample_1.yaml  actionrec_sample_2.yaml  actionrec_sample_5.yaml  msc1_20250126T124501.yaml  msc2_20250125T201500.yaml
markup/predict/: 1_20250126T121502.yaml  2_20250125T161501.yaml  2_20250125T170001.yaml  actionrec_sample_1.yaml  actionrec_sample_2.yaml  actionrec_sample_5.yaml  msc1_20250126T124501.yaml  msc2_20250125T201500.yaml
src/: matcher.py  settings.py  test.py  test_concurrent.py  tracker.py
src/models/pose/: base.py
src/models/pose/yolo/: model.py  yolo.py
src/models/pose/yolo11m_pose__opensource/: __init__.py  model.py
src/models/reid/: base.py
src/models/reid/osnet/: __init__.py  model.py  osnet.py
src/models/reid/osnet_x1_0__opensource/: model.py
